# simple-data-parser

./: .clang-format  .gitignore  CMakeLists.txt  README.md  main.cpp
.github/workflows/: test.yml
app/: CMakeLists.txt
app/auth/: CMakeLists.txt
app/auth/include/auth/: AuthManager.hpp  IAuthentication.hpp
app/auth/src/: AuthManager.cpp
app/common/: CMakeLists.txt
app/common/constants/: Constants.hpp
app/common/include/constants/: Constants.hpp
app/common/include/types/: Report.hpp  ReportFormat.hpp  StorageFormat.hpp  User.hpp
app/common/src/types/: Report.cpp  ReportFormat.cpp  StorageFormat.cpp  User.cpp
app/common/types/: Report.hpp  ReportFormat.hpp
app/configs/: CMakeLists.txt
app/configs/include/configs/: StartupConfig.hpp
app/configs/src/: StartupConfig.cpp
app/configs/unit_tests/: CMakeLists.txt  StartupConfig_tests.cpp
app/interfaces/: CMakeLists.txt
app/interfaces/include/interfaces/auth/: IAuthorization.hpp
app/interfaces/include/interfaces/parsers/: ICredentialsParser.hpp  IParsersFactory.hpp  IReportParser.hpp
app/interfaces/include/interfaces/services/: ITaxService.hpp  ITaxServiceFactory.hpp
app/interfaces/include/interfaces/storage/: IReportStorage.hpp  IStorageFactory.hpp
app/mocks/: CMakeLists.txt
app/mocks/include/mocks/: AuthenticationMock.hpp  AuthorizationMock.hpp  CredentialsParserMock.hpp  ReportParserMock.hpp  ReportStorageMock.hpp  TaxServiceFactoryMock.hpp
app/parsers/: CMakeLists.txt
app/parsers/include/parsers/: ICredentialsParser.hpp  IReportParser.hpp  JsonParser.hpp  JsonReportParser.hpp  ParsersFactory.hpp  ValidatedReportParser.hpp  XmlParser.hpp  XmlReportParser.hpp  YamlParser.hpp
app/parsers/src/: JsonParser.cpp  JsonReportParser.cpp  ParsersFactory.cpp  ValidatedReportParser.cpp  XmlParser.cpp  XmlReportParser.cpp  YamlParser.cpp
app/parsers/unit_tests/: CMakeLists.txt  JsonParser_tests.cpp  JsonReportParser_tests.cpp  ValidatedReportParser_tests.cpp  XmlParser_tests.cpp  XmlReportParser_tests.cpp  YamlParser_tests.cpp
app/servers/: CMakeLists.txt
app/servers/include/servers/: ReportSession.hpp  Server.hpp
app/servers/src/: ReportSession.cpp  Server.cpp
app/servers/unit_tests/: CMakeLists.txt  ReportSession_tests.cpp
app/services/: CMakeLists.txt
app/services/include/services/: ITaxServiceFactory.hpp  TaxService.hpp  TaxServiceFactory.hpp
app/services/src/: TaxService.cpp  TaxServiceFactory.cpp
app/services/unit_tests/: CMakeLists.txt  ReportParserMock.hpp  TaxService_tests.cpp
app/storage/: CMakeLists.txt
app/storage/include/storage/: DummyStorage.hpp  FileStorage.hpp  ReportsStorage.hpp  SQLiteStorage.hpp  StorageFactory.hpp  ValidatedReportStorage.hpp
app/storage/src/: DummyStorage.cpp  FileStorage.cpp  ReportsStorage.cpp  SQLiteStorage.cpp  StorageFactory.cpp  ValidatedReportStorage.cpp
cmake/: Tools.cmake  Warnings.cmake
tests/scenario_tests/: tests.py
tests/unit_tests/: CMakeLists.txt  dummy.cpp
